--- a/css/scss/base/_global-classes.scss
+++ b/css/scss/base/_global-classes.scss
@@ -20,7 +20,9 @@
     margin:0 auto;
     position: relative;
 }
-
+#page {
+    padding-top: $padpx-double;
+}
 /* Completely remove from the flow and screen readers. */
 .is-hidden {
     display: none !important;
