--- a/css/scss/generic/_variables.scss
+++ b/css/scss/generic/_variables.scss
@@ -44,8 +44,8 @@ $brand-linkedin: #217bc1;
 }
 
 
-$font : "Adobe Caslon Pro", Georgia, Times, "Times New Roman", serif;
-$font-secondary : ITC Franklin Gothic Std, "HelveticaNeue", "Helvetica", "Arial", sans-serif;
+$font : "adobe-caslon-pro", "Adobe Caslon Pro", Georgia, Times, "Times New Roman", serif;
+$font-secondary : "franklin-gothic-urw", ITC Franklin Gothic Std, "HelveticaNeue", "Helvetica", "Arial", sans-serif;
 $font-tertiary : "BlanchCon", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
 
 $font-size-norm : 1em;
