--- a/css/scss/objects/_layout.scss
+++ b/css/scss/objects/_layout.scss
@@ -44,7 +44,7 @@
 \*------------------------------------*/
 
 /* Grid Container */
-.g {
+.section {
 	overflow: hidden;
 	margin: $padpx-double 0;
 	padding: $padpx-double 0.875%;
@@ -55,6 +55,9 @@
 	@media all and (min-width: $bp-small) {
 		margin: $padpx-quad 0;
 	}
+	@media all and (min-width: $bp-full) {
+	padding: $padpx-double $padpx-half;
+	}
 
 	>a {
 		@include font-2-style();
@@ -64,16 +67,7 @@
 		right: $padpx;
 	}
 }
-.g.cont-wrap {
-	padding: 6.12% 2.05%;
-
-	> img,
-	> div {
-		margin-bottom: 2.12%;
-
-	}
-}
-.g .ghead {
+.section .ghead {
 	position: absolute;
 	top: -25px;
 	width: 100%;
@@ -93,6 +87,10 @@
 	@media all and (min-width: $bp-med) {
 		float: left;
 	}
+	@media all and (min-width: $bp-full) {
+		margin: 0 $padpx-half $padpx;
+	}
+
 }
 
 /* Grid 1up */
@@ -111,6 +109,11 @@
 			&:nth-of-type(odd) {
 				clear: left;
 			}
+		}
+	}
+	@media all and (min-width: $bp-full) {
+		> .gi {
+			width: 460px;
 		}
 	}
 }
@@ -153,6 +156,12 @@
 			}
 		}
 	}
+	@media all and (min-width: $bp-full) {
+		> .gi {
+			width: 300px;
+		}
+	}
+
 }
 
 /* Grid 4up */
