added genericon support

--- a/css/scss/base/_links.scss
+++ b/css/scss/base/_links.scss
@@ -15,7 +15,7 @@ a {
 	display: inline-block;
 	background: $grey-light;
 	overflow: hidden;
-	text-indent: -999em;
+//	text-indent: -999em;
 	border-radius: 50%;
 
 	&:hover, &:focus {
@@ -26,5 +26,13 @@ a {
 	height:18px;
 	width: 18px;
 	display: inline;
+    font-size: 18px;
 	margin-right: $padpx-half;
+}
+
+/**
+ * All Genericons.
+ */
+[class*="genericon"] {
+    font-size: 18px;
 }
