--- a/css/style.scss
+++ b/css/style.scss
@@ -58,8 +58,7 @@ So feel free to use any of these approaches. Or don't. It's totally up to you.
 @import "scss/generic/variables";
 @import "scss/generic/mixins";
 @import "scss/generic/reset";
-
-
+@import "../fonts/genericons.css";
 
 
 
