added home anchors and added class .more the View More links

--- a/css/scss/base/_links.scss
+++ b/css/scss/base/_links.scss
@@ -7,6 +7,11 @@ a {
 	&:hover, &:focus {
 		color: $red;
 	}
+
+    &.anchor {
+        display: block;
+        padding-top: 30px;
+    }
 }
 
 .nav-social a {
