removed bg colors from social links, changed linkedin to linkedin-alt

--- a/css/scss/base/_links.scss
+++ b/css/scss/base/_links.scss
@@ -18,13 +18,13 @@ a {
 	height:18px;
 	width: 18px;
 	display: inline-block;
-	background: $grey-light;
+//	background: $grey-light;
 	overflow: hidden;
 //	text-indent: -999em;
-	border-radius: 50%;
+//	border-radius: 50%;
 
 	&:hover, &:focus {
-		background: $grey;
+//		background: $grey;
 	}
 }
 .nav-social li {
