remove borders from a > img for IE

--- a/css/scss/base/_links.scss
+++ b/css/scss/base/_links.scss
@@ -12,7 +12,12 @@ a {
         display: block;
         padding-top: 30px;
     }
+
+    img {
+        border: none;
+    }
 }
+
 
 .nav-social a {
 	height:18px;
