--- a/css/scss/generic/_variables.scss
+++ b/css/scss/generic/_variables.scss
@@ -44,7 +44,7 @@ $brand-linkedin: #217bc1;
 }
 
 
-$font : "adobe-caslon-pro", "Adobe Caslon Pro", Georgia, Times, "Times New Roman", serif;
+$font : "freight-text-pro", "Adobe Caslon Pro", Georgia, Times, "Times New Roman", serif;
 $font-secondary : "franklin-gothic-urw", ITC Franklin Gothic Std, "HelveticaNeue", "Helvetica", "Arial", sans-serif;
 $font-tertiary : "BlanchCon", "HelveticaNeue", "Helvetica", "Arial", sans-serif;
 
@@ -97,7 +97,7 @@ $bp-med-2 : 35em;
 
 $bp-large : 45em; // (720px)
 $bp-large-2 : 50em; // (800px)
-$bp-full : 63.75em; // (1020px)
+$bp-full : 1040px; // (1020px)
 
 $bp-xl : 73em;
 $bp-xxl : 89em;
