--- a/css/scss/base/_media.scss
+++ b/css/scss/base/_media.scss
@@ -24,3 +24,16 @@ figcaption {
 .single-format-video iframe {
     width: 100%;
 }
+.videoWrapper p {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 0;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
